# LLM-Cost-Guardian

./: .gitignore  .golangci.yml  LICENSE  Makefile  README.md  config.example.yaml  funding.json  go.mod  go.sum  roadmap.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  release.yml
cmd/guardian/: main.go  main_test.go
cmd/lcg/: main.go  main_test.go
deploy/docker/: Dockerfile
docs/: architecture.md  configuration.md
docs/grants/: nlnet-ngi-zero.md
grafana/dashboards/: llm-costs.json
internal/bootstrap/: service.go  service_internal_test.go  service_test.go
internal/cli/: api_keys.go  budget.go  commands_test.go  intelligence.go  providers.go  proxy.go  report.go  root.go  tenants.go  track.go  version.go
internal/config/: config.go  config_test.go
internal/httpauth/: middleware.go  middleware_test.go
internal/proxy/: extractor.go  extractor_test.go  handler.go  handler_test.go  stream.go
internal/reporting/: export.go  export_test.go  pdf.go
internal/server/: metrics.go  server.go  server_test.go
pkg/alerts/: slack.go  slack_test.go  types.go  webhook.go  webhook_test.go
pkg/auth/: keys.go  keys_test.go
pkg/model/: types.go  types_test.go
pkg/providers/: anthropic.go  anthropic_test.go  azure_openai.go  bedrock.go  openai.go  openai_test.go  pricing.go  pricing_test.go  registry.go  registry_test.go  (+3 more)
pricing/: anthropic.yaml  azure-openai.yaml  bedrock.yaml  openai.yaml  vertex-ai.yaml
sdk/python/: README.md  pyproject.toml
sdk/python/llm_cost_guardian/: __init__.py  client.py
sdk/python/tests/: test_client.py
(+23 files in other folders)
